force-app/main/default/objects/FEC_API_Log__c/fields/FEC_Custom_Sync__c.field-meta.xml
<CustomField>
    <fullName>FEC_Custom_Sync__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Sync</label>
    <referenceTo>CustomSync__c</referenceTo>
    <relationshipLabel>API Logs</relationshipLabel>
    <relationshipName>API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>