force-app/main/default/objects/FEC_API_Log__c/fields/FEC_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>FEC_Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>