force-app/main/default/objects/FEC_API_Log__c/fields/FEC_Is_Success__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Success__c</fullName>
    <label>Is Success</label>
    <length>255</length>
    <type>Text</type>
</CustomField>