force-app/main/default/objects/FEC_API_Log__c/fields/FEC_Quantity_Call__c.field-meta.xml
<CustomField>
    <fullName>FEC_Quantity_Call__c</fullName>
    <label>Quantity Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>