force-app/main/default/objects/FEC_API_Log__c/fields/FEC_Response_String__c.field-meta.xml
<CustomField>
    <fullName>FEC_Response_String__c</fullName>
    <label>Response String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>