force-app/main/default/objects/FEC_API_Log__c/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>